# system-info-tool

./: .gitignore  CONTRIBUTING.md  Changelog.md  License  License.md  README.md  requirements.txt  setup.cfg
src/: colors.py  main.py  system_info.py
