[metadata]
name = sysinfo
version = 1.0.0
author = Bodo Schönfeld
author_email = bodo.schoenfeld@niftycode.de
url = https://github.com/niftycode/temperature-converter
description = Displays information about the operating system
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
requires_python = >=3.12
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: MacOS
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython

[options]
zip_safe = False
packages = find:
setup_requires =
    setuptools >=60.0.0
install_requires =
    setuptools

[options.entry_points]
console_scripts =
    sysinfo = src.main:main

[options.packages.find]
exclude =
    tests

[bdist_wheel]
universal = 1

